Fixed alignment in the services list

--- a/src/css/_main.scss
+++ b/src/css/_main.scss
@@ -1021,7 +1021,6 @@
       flex-basis: 40%;
       max-width: 40%;
       white-space: nowrap;
-      text-align: right;
     }
   }
 
@@ -1033,6 +1032,7 @@
     display: block;
     padding-bottom: 2px;
     font-weight: bold;
+    text-align: right;
   }
 
   &__term {
@@ -1040,6 +1040,7 @@
     position: relative;
     top: -3px;
     font-size: 14px;
+    text-align: right;
     color: $color-text-soft;
   }
 }
